# HKToss-Project

./: .development.env  .dockerignore  .gitignore  .gitmessage.txt  LICENSE  README.md  airflow_local.sh  docker-compose.airflow.yml  docker-compose.mlflow.yml  docker-compose.yml  pram_grid_s.py
.aws/: ecs_task_definition.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: airflow.yml  deploy.yml  lint.yml
.streamlit/: config.toml
airflow/: README.md  docker-compose.yaml  requirements.txt
airflow/dags/: final_pipeline.py  pipeline.py
airflow/dags/data/: combine_data.py  eval_lg.py  eval_rf.py  fetch_data.py  import_mongo.sh  import_to_mongo.py  load_config.py  load_dataset.py  load_model.py  poll_collection.py  run.yaml  run_experiment.py  run_logistic.py
client/: README.md  app.py  pyproject.toml  requirements.txt  text.ipynb  tunnel.sh
client/pages/: 1_application_of_results.py  analysis.py
client/utils/: __init__.py  api.py  data.py
dockerfiles/: Dockerfile.airflow  Dockerfile.api  Dockerfile.mlflow  Dockerfile.streamlit
hktoss-package/: pyproject.toml
inference-api/: pyproject.toml
inference_api/: README.md  pyproject.toml
inference_api/inference_api/: app.py
inference_api/inference_api/config/: config.py
inference_api/inference_api/models/: __init__.py  dto.py
inference_api/inference_api/services/: __init__.py  inference.py
inference_api/inference_api/utils/: __init__.py  auth.py  functions.py
models/: CB.py  LGB.py  LR.py  RF.py  XGB.py  __init__.py
notebooks/: 00_baseline_model_test.ipynb  01_data_prep.ipynb  02_dataset_split.ipynb  02_making_demo.ipynb  example.yaml  exp_test.py  permutation.ipynb  pr_practice_alone.py  requirements.txt
notebooks/config/: 01_logistic.yaml  01_logistic_after.yaml  01_logistic_base.yaml  02_randomforest.yaml  03_lightgbm.yaml  04_catboost.yaml  05_xgboost.yaml  06_mlp.yaml
package/: pyproject.toml
package/hktoss_package/config/: __init__.py  config.py
package/hktoss_package/models/: CatBoost.py  LightGBM.py  MLP.py  RandomForest.py  XGBoost.py  __init__.py  logisticRegression.py
package/hktoss_package/models/base/: __init__.py  baseModel.py
package/hktoss_package/trainers/: __init__.py  mlflow.py
package/hktoss_package/utils/: functions.py
