[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.37.1"
pandas = "2.0.3"
matplotlib = "3.7.5"
seaborn = "0.13.2"
python-dotenv = "^1.0.1"
boto3 = "^1.35.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
