[tool.poetry]
name = "inference_api"
version = "0.1.0"
description = ""
authors = ["cwwojin <cwwojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
boto3 = "^1.35.8"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
mlflow = "2.15.1"
scipy = "1.14.0"
xgboost = "2.1.1"
lightgbm = "4.5.0"
catboost = "1.2.5"
hktoss-package = {path = "../package"}



[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
