[tool.poetry]
name = "hktoss_package"
version = "0.1.0"
description = "HKToss MLOps - Midterm Project"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
mlflow = "^2.15.1"
skl2onnx = "^1.17.0"
pymongo = {extras = ["srv"], version = "^4.8.0"}
python-dotenv = "^1.0.1"
yacs = "^0.1.8"
boto3 = "^1.35.5"
setuptools = "^73.0.1"
xgboost = "2.1.1"
lightgbm = "4.5.0"
catboost = "^1.2.5"
imbalanced-learn = "^0.12.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
